--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
   <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <title>Nft Preview</title>
 </head>
 <body>
   <main>
     <div class="card">
-      <img src="images/image-equilibrium.jpg" alt="">
+      <img src="images/image-equilibrium.jpg" alt="image" class="image">
+      <h1>Equilibrium 3429</h1>
+      <p>Our Equilibrium collection promotes balance and calm</p>
+
+      <div class="eth">
+        <div class="eth-icon">
+          <img src="images/icon-ethereum.svg" alt="etherium-icon">0.041 ETH
+        </div>
+
+        <div class="clock">
+          <img src="images/icon-clock.svg" alt="clock">3 days left
+        </div>
+      </div>
+
+      <div class="avatar">
+        <img src="images/image-avatar.png" alt="avatar" class="avatar-img">
+        <h2>Creator of <span>Jules Wyvern</span></h2>
+      </div>
     </div>
   </main>
   
